--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
-    </script>
-    <title>Document</title>
+<head th:replace="~{base :: head}">
 </head>
 
 <body>
+    <div th:replace="~{base :: logo}"></div>
     <div class="container">
-        <div class="jumbotron mb-0">
-            <h1 class="display-4">Meus Pedidos</h1>
-        </div>
+    <div th:replace="~{base :: titulo('Meus Pedidos')}"></div>
+
 
         <nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between mb-3">
             <div class="navbar-nav">
@@ -28,7 +19,7 @@
             </div>
             <a href="/pedido/formulario"><button class="btn btn-outline-secondary my-2 my-sm-0">Novo</button></a>
         </nav>
-        <div class="card" th:each=" pedido: ${pedidos}">
+        <div class="card mb-3" th:each=" pedido: ${pedidos}">
             <div class="card-header" th:text="${pedido.nomeProduto}">Nome do Produto:</div>
 
             <div class="card-body">
