--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -23,7 +23,11 @@
 
 <div th:fragment="logo" class="logo-container mb-3 p-3 d-flex justify-content-between">
     <span class="logo">mudi</span>
-    <span class="mt-3">login</span>
+    <span class="mt-3">
+        <a sec:authorize="!isAuthenticated()" class="text-light" href="/login">Login</a>
+        <a onclick="document.querySelector('#form-login').submit()" sec:authorize="isAuthenticated()" class="text-light" href="#">Logout</a>
+        <form id="form-login"th:action="@{/logout}" method="post"></form>
+    </span>
 </div>
 
 <div th:fragment="titulo(valor)" class="jumbotron mb-0">
