--- a/src/main/resources/templates/pedido/formulario.html
+++ b/src/main/resources/templates/pedido/formulario.html
@@ -7,7 +7,7 @@
     <div class="container">
     <div th:replace="~{base :: titulo('Novo Pedido')}"></div>
         <div class="card mt-3">
-            <form th:object="${requisicaoNovoPedido}" action="/pedido/novo" method="POST" class="card-body">
+            <form th:object="${requisicaoNovoPedido}" th:action="@{/pedido/novo}" method="POST" class="card-body">
                 <div class="form-group">
                     <label for="nomeProduto">Produto</label>
                     <input th:field="*{nomeProduto}" th:errorClass="is-invalid" class="form-control" name="nomeProduto"
