--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -3,9 +3,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
     </script>
     <style>
         .logo-container {
@@ -17,19 +17,33 @@
             font-family: 'Handlee', cursive;
             font-size: 2.5rem;
         }
+
+
+
     </style>
     <title>Document</title>
 </head>
 
-<div th:fragment="logo" class="logo-container mb-3 p-3 d-flex justify-content-between">
-    <span class="logo">mudi</span>
-    <span class="mt-3">
-        <a sec:authorize="!isAuthenticated()" class="text-light" href="/login">Login</a>
-        <a onclick="document.querySelector('#form-login').submit()" sec:authorize="isAuthenticated()" class="text-light" href="#">Logout</a>
-        <form id="form-login"th:action="@{/logout}" method="post"></form>
+<div th:fragment="logo">
+    <div class="row logo-container p-3 p-3 d-flex justify-content-between">
+        <span class="logo ml-2">mudi</span>
+        <span class="mt-3 mr-2">
+        <a sec:authorize="isAnonymous()" class="text-light" href="/login">Login</a>
+        <a onclick="document.querySelector('#form-login').submit()" class="text-light" sec:authorize="isAuthenticated()"
+           href="#">Logout</a>
+        <form id="form-login" th:action="@{/logout}" method="post"></form>
     </span>
+    </div>
+    <div class="row mb-2" sec:authorize="isAuthenticated()">
+        <div class="col">
+            <nav class="nav">
+                <a class="nav-link" th:href="@{/home}">Home</a>
+                <a class="nav-link" th:href="@{/usuario/pedido}">Meus Pedidos</a>
+            </nav>
+        </div>
+    </div>
 </div>
 
-<div th:fragment="titulo(valor)" class="jumbotron mb-0">
+<div th:fragment="titulo(valor)" class="jumbotron mb-2 mt-2">
     <h1 class="display-4" th:text="${valor}"></h1>
 </div>
